Prevented isotope from loading on small screens and hid filters

--- a/assets/sass/partials/_sidebar.scss
+++ b/assets/sass/partials/_sidebar.scss
@@ -109,6 +109,10 @@
   list-style: none;
   line-height: 1.5;
   padding-left: 0;
+
+  @include respond-to("small") {
+    display: none;
+  }
 }
 
 .album-name {
